--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "^0.1.221",
     "react": "18.2.0",
     "react-native": "0.72.7",
-    "react-native-webview": "^13.6.3"
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
