--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@shopify/react-native-skia": "^0.1.221",
+    "nanoid": "^5.0.3",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "zustand": "^4.4.6"
