--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nanoid": "^5.0.3",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-big-calendar": "^4.7.2",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native": "^0.72.7",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
