--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
     "@shopify/react-native-skia": "^0.1.221",
     "axios": "^1.6.2",
     "nanoid": "^5.0.3",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-big-calendar": "^4.7.2",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
