--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "nanoid": "^5.0.3",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-action-button": "^2.8.5",
     "react-native-big-calendar": "^4.7.2",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.6.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.2",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.72.7",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
