--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,4 +121,9 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+project.ext.vectoricons = [
+    iconFontsDir: "../../node_modules/react-native-vector-icons/Fonts",
+    iconFontNames: [ 'MaterialIcons.ttf', 'Ionicons.ttf' ] // Specify font files
+]
+
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
